# starsearch-manager

./: .envrc  README.md  pyproject.toml
search_manager/: cli.py  functions.py
starsearch_manager/: cli.py  commands.yaml
starsearch_observer/: cli.py  functions.py
